BUG URLSegment field styling fixes #2193
Squashed commit of the following:

commit 6ee00358f70e26ef5faf622b8f23fc4419698ed5
Author: Maxime Rainville <maxime@silverstripe.com>
Date:   Wed Jul 11 13:22:07 2018 +1200

    Remove debug statement.

commit 8e80300244a19e84d638ffd151b236b846c35b77
Author: Luke Edwards <luke@silverstripe.com>
Date:   Wed Jul 11 10:55:04 2018 +1200

    Only remove actions for readonly rather than only display link

commit 1d3693432bb1ca403d3eefc648cfddb8372b82bd
Author: Luke Edwards <luke@silverstripe.com>
Date:   Wed Jul 11 09:12:21 2018 +1200

    Stop button wrapping when 'Cancel' is longer in another language

commit 5495992b22a0546aaa87e5ea1b2fa9c79f6e119d
Author: Luke Edwards <luke@silverstripe.com>
Date:   Tue Jul 10 16:02:27 2018 +1200

    Use link as the readonly representation of the URLSegment

commit 5737e152424281dbea480872900d735cc43f5fd3
Author: Luke Edwards <luke@silverstripe.com>
Date:   Mon Jun 18 11:07:34 2018 +1200

    Improve readonly styling of URLSegement field

commit 272da9361452843fbb368bfc67e13e6d9540faf2
Author: Luke Edwards <luke@silverstripe.com>
Date:   Mon Jun 18 10:18:33 2018 +1200

    Use input-addon style for URLSegment field

--- a/client/src/styles/legacy/_CMSMain.scss
+++ b/client/src/styles/legacy/_CMSMain.scss
@@ -139,6 +139,10 @@
  * URLSegment field
  * ----------------------------------------------------------------- */
 .field.urlsegment {
+  .input-group {
+    width: auto;
+    flex-wrap: nowrap;
+  }
 
 	&.loading .form__field-label {
 		background-image: url(../../images/loading.gif);
@@ -153,13 +157,22 @@
 	}
 
 	input.text {
-		width: 250px; // ensure there's enough room for buttons
-    float: left;
-	}
+		flex: 0 1 250px;
+  }
 
-	input.text, .cancel, .update, .edit {
-		margin-right: 8px;
-	}
+  .input-group-append {
+    z-index: 2;
+
+    &:last-of-type {
+      z-index: 1;
+    }
+
+    .btn {
+      margin-top: 0;
+      padding-top: $input-padding-y;
+      padding-bottom: $input-padding-y;
+    }
+  }
 
 	.help {
 		margin-left: 0;
@@ -178,8 +191,4 @@
     border-radius: 0 3px 3px 0;
     margin-right: 0px;
     margin-left: -1px;
-}
-
-#Form_EditForm #Title .update {
-	margin-left: 7px;
 }
